# paoo_dump

./: .gitignore  CMakeLists.txt  README.md  foo.cpp  notes
header/: Base.hpp  Car.hpp  Complex.hpp  Composed.hpp  Context.hpp  Derived.hpp  ElectricEngine.hpp  Engine.hpp  LocalResource.hpp  LocalResourceFactory.hpp  RemoteResource.hpp  RemoteResourceFactory.hpp  Resource.hpp  ResourceFactory.hpp  ResourceManager.hpp  Transmission.hpp  Uncopyable.hpp
source/: Base.cpp  Car.cpp  Complex.cpp  Composed.cpp  Context.cpp  Derived.cpp  ElectricEngine.cpp  Engine.cpp  LocalResource.cpp  LocalResourceFactory.cpp  RemoteResource.cpp  RemoteResourceFactory.cpp  Resource.cpp  ResourceManager.cpp  Transmission.cpp  main.cpp
